ckanext/ngds/ngdsui/public/css/map.less
@left-pane-back: #efefef;
@map-pane-oapcity: 0.95;

.map-search-results {
  width: 320px;
  position: relative;
  top: 0px;
  z-index: 4000;

  .visibility-toggler {
    position: absolute;
    right: 20px;
    display: inline;

    button {
      //      .ngds-button(20px);
      background-image: url(/assets/visibility_show.png);
      padding-top: 0px;
      width: 25px;
      height: 25px;
      border: none;
    }

    button.toggled {
      background-image: url(/assets/visibility_hide.png);
    }

  }

  .jspVerticalBar {
    right: 2px;
    width: 5px;

    .jspDrag {
      background-color: #38719C;
    }

    .jspTrack {
      background-color: #dfdfdf;
    }
  }

  .jspScrollable {
    outline-color: transparent;
  }

  .jspPane {

  }

  .wms {
    .ngds-tag;
    background-color: #206b82;
    color: white;
    height: 20px;
    font-size: 12px;
    padding: 0 10px;

    &:first-of-type {
      margin-left: 0px;
    }
  }

  div.results-text {
    background-color: @left-pane-back;
    opacity: @map-pane-oapcity;
    width: 310px;
    line-height: 0.9em;
    display: none;
    margin-top: 0px;
    padding-top: 0px;
    padding-bottom: 15px;
    border-top: 1px solid @left-pane-back;
    box-shadow: 0px 3px 0px 0px black;

    .search-tools {
      position: absolute;
      right: 35px;
      .rect-draw-tool {
        display: inline;
        .rect-draw {
          background-image: url(/assets/map_draw_rect.png);
          width: 26px;
          height: 25px;
          border: none;
        }
      }
    }

    div.reader {
      margin-top: 25px;
      margin-left: 5px;
      p {
        margin-top: 0px;
        margin-left: 5px;
      }
    }

    .visibility-toggler {
      right: 5px;
      position: '';
    }
  }

  .reader {
    margin-top: 15px;
    font-weight: bold;
    margin-left: 15px;
    font-size: 12px;
    color: grey;
    margin-bottom: 0px;
    padding-bottom: 0px;
  }

  .results, .pager {
    font-family: Arial;
    font-size: 12px;
  }

  .results {
    position: relative;
    width: 310px;
    background-color: @left-pane-back;
    opacity: @map-pane-oapcity;
    margin-bottom: 0px;
    overflow: auto;
    min-height: 520px;
    max-height: 520px;
    padding-bottom: 0px;
    display: none;

    scrollbar-face-color: #000000;
    scrollbar-shadow-color: #2D2C4D;
    scrollbar-highlight-color: #7D7E94;
    scrollbar-3dlight-color: #7D7E94;
    scrollbar-darkshadow-color: #2D2C4D;
    scrollbar-track-color: #7D7E94;
    scrollbar-arrow-color: #C1C1D1;

    .result {
      z-index: 10000;
      border-bottom: 1px solid #afafaf;
      border-top: 1px solid #ffffff;
      padding-top: 10px;
      padding-bottom: 10px;

      &:hover {
        cursor: pointer;
        background-color: rgb(222, 233, 237);
      }

      .description-wrapper {
        margin-bottom: 0px;
        color: #0b3656;
      }

      .description {
        font-size: @font-large;
        font-weight: bold;
        text-decoration: none;
        color: #0b3656;
        cursor: pointer;
      }

      .additional-dataset-info {

      }

      .type, .published {
        display: inline;
        color: grey;
        font-weight: bold;
        font-size: 11px;
      }

      .published {
        float: right;
        margin-right: 20px;
      }

      .published {
        color: grey;
      }

      .notes {
        font-weight: bold;
        margin-bottom: 0px;
        width: 90%;
        margin-left: 30px;
        padding-right: 25px;
      }

      .dataset-resources {
        margin: 0px;
        padding: 0px;
        height: 20px;
        padding-left: 35px;
      }
    }

    .selected {
      background-color: rgb(222, 233, 237);
    }

    .result-marker-label {
      position: absolute;
      margin-top: 7px;
      left: 8px;
      color: #fff;
      font-size: 11.5pt;
      font-weight: bold;
    }

    .result-marker {
      width: 25px;
      height: 41px;
    }

    .result-marker-container {
      margin: 0px 10px 10px 10px;
      float: left;
    }

  }

  .large {
    height: 700px;
  }

  .full {
    .results;
    height: 565px; // Map height - top of results - TODO
    z-index: 5000;
  }

  .search-results-pagination {
    //    display: block;
    display: none;
    position: relative;
    text-align: center;
    background-color: #fff;
    opacity: @map-pane-oapcity;
    width: 310px;
    margin-top: -1px;

    .search-results-page-nums {
      background-color: @left-pane-back;
      box-shadow: 0px 0px 2px 0px grey;
      a {
        margin-left: 5px;
        font-weight: bold;
        color: grey;
        font-size: @font-large;

        &:hover {
          cursor: pointer;
        }
      }

      .page-active {
        color: #236393;
      }
    }

  }

  .map-expander {
    width: 310px;
    height: 20px;
    background-color: #366D96;
    position: relative;
    cursor: pointer;

  }

}

#map-container {
  height: 700px;
  position: relative;
  z-index: 3000;

  label {
    font-weight: normal;
    font-size: 12px;
  }

  label::after {
    content: "";
  }
}

.leaflet-map-pane {
  z-index: 20;
}

.map-search {
  position: relative;
  z-index: 5000;
  width: 310px;
  top: 10px;
  left: 10px;
  border-top: 4px solid #236393;
  opacity: @map-pane-oapcity;
  height: 65px;
  margin-bottom: 0px;
  padding-bottom: 0px;
  border-bottom: 4px solid @left-pane-back;

  form {
    margin-top: 10px;
    margin-left: 10px;

    fieldset {
      margin-top: 15px;
    }

    input[type="text"] {
      margin-bottom: 0px;
      padding-bottom: 0px;
      height: 30px;
      width: 225px;
      margin-top: 0px;
      padding-top: 0px;
      background-color: #fefefe;
      border-radius: 0px;
      border: 2px solid #366D96;
    }

    input[type="button"] {
      width: 45px;
      height: 30px;
      margin-left: 4px;
      margin-top: 0px;
      padding-top: 3px;
    }
  }
}

.dialog-small-map {
  background-color: @left-pane-back;
}

.leaflet-control {
  //  background-color: #366D96 !important;
  color: black;

  label {
    color: black;
  }
}

#map-container .leaflet-control-geosearch {
  width: 200px;
  height: 50px;
  background-color: #efefef;
  border-radius: 0px;
  border-top: 5px solid #366D96;
  border-bottom: 5px solid #366D96;
  text-align: center;
  height: 50px;

  input {
    width: 85%;
    margin-top: 5px;
    border: 2px solid #366D96;
    border-radius:0px;
  }
}

.leaflet-container a {
  //  color:white !important;
}

.leaflet-control-fullscreen {
  background-image: url('/vendor/zoomfs/zoom.png');
  margin-bottom: 5px;
}

.leaflet-control-zoom-fullscreen {
  background-image: url(/assets/map_fullscreen.png);
}

.leaflet-control a {
  background-color: transparent !important;
}

.leaflet-control-zoom {
  width: 25px;
  margin-right:15px !important;
  a {
    margin-top: 0px;
    float: left;
    &:first-of-type {
      float: right;
    }
  }
}

#map-container.l-control-zoom {
  margin-left: 310px;
}

.leaflet-control-zoom-in {
  background-image: url(/assets/map_zoom_in.png) !important;
}

.leaflet-control-zoom-out {
  background-image: url(/assets/map_zoom_out.png) !important;
}

.leaflet-control-draw {
  background-color: transparent !important;
  .leaflet-control-draw-rectangle {
    width: 26px;
    height: 25px;
    background-image: url(/assets/map_draw_rect.png) !important;
    background-color: transparent;
  }
}

.leaflet-control-rectangle-clear-container {
  width: 30px;
  height: 30px;
  padding: 5px;
  margin-top: 0px !important;

  .leaflet-control-rectangle-clear {
    background-image: url(/assets/map_draw_rect.png) !important;
    width: 26px;
    height: 25px;
    background-position: 50% 50%;
    display: block;
  }

}

.leaflet-control-fullscreen-container {
  width: 30px;
  height: 30px;
  padding: 5px;
  margin-top: 0px !important;

  .leaflet-control-fullscreen {
    background-image: url(/assets/map_fullscreen.png) !important;
    width: 26px;
    height: 25px;
    background-position: 50% 50%;
    display: block;
  }
}

.leaflet-control-layers {
  background-color: transparent !important;
  padding:10px;
  box-shadow:none !important;
  margin-top:0px !important;
  padding-top:0px;

  a {
    background-image: url(/assets/layer_selector.png) !important;
    width: 24px !important;
    height: 23px !important;
  }

}

.leaflet-control-layers-expanded {
  background-color: @left-pane-back !important;
  border: 1px solid grey;
  border-radius: 0px;
  border-top: 4px solid #236393;
  padding: 0;

  .leaflet-control-layers-separator {
    border: none;
  }

  form {

    label {
      padding: 0px 10px 0px 10px;
      border-bottom: 1px dotted grey;
    }

    input {
      margin-top: -4px;
    }
  }
}

#map-container:-webkit-full-screen {
  width: 100% !important;
  height: 100% !important;
}

.leaflet-container:-webkit-full-screen {
  width: 100% !important;
  height: 100% !important;
}

div.red-box {
  width: 17px;
  height: 17px;
  margin: 5px 10px 10px 10px;
  background-color: #319FD2;
  float: left;
}

div.red-marker {
  height: 10px;
  width: 20px !important;
  border-radius: 90px 90px 0 0;
  -moz-border-radius: 90px 90px 0 0;
  -webkit-border-radius: 90px 90px 0 0;
  background: #319FD2;
}

div.red-marker:after {
  content: "";
  width: 0;
  height: 0;
  border-top: 22px solid #319FD2;
  border-left: 10px solid transparent;
  border-right: 10px solid transparent;
  float: left;
  margin-top: 10px;
}

#map-container .leaflet-left {
  margin-left: 320px;
}

.fullscreen {
  height: 100% !important;
}

.leaflet-popup-content-wrapper, .leaflet-popup-tip {
  box-shadow: 0 2px 2px #4F4D4E !important;
  background: #efefef !important;
}

.leaflet-popup-tip {
  border-radius: 0px;
  border: 1px solid black;
  margin-top: -1px
}

.leaflet-popup-close-button {
  z-index: 999;
  color: #efefef;
}

.leaflet-popup-content-wrapper {
  border: 1px solid grey;
  border-radius: 0px 0px 0px 0px;
  background: @left-pane-back !important;
  opacity: @map-pane-oapcity;

  strong {
    display: block;
  }

  p strong {
    display: inline;
  }

  .leaflet-popup-content {

    margin-top: 8px;
    margin-bottom: 0px;
    padding-bottom: 0px;

    a.title {
      font-size: 14px;
      font-weight: bold;
    }

    p.title {
      margin-bottom: 6px;
      margin-top: 6px;
      padding-bottom: 5px;
      border-bottom: 1px dotted grey;
    }

    p.description {
      text-align: justify;
      margin: 3px 0px 3px 0px;
      padding-top: 5px;
      border-bottom: 1px dotted grey;
      padding-bottom: 8px;
    }

    p.resources {
      margin-bottom: 6px;
      margin-top: 6px;
      font-weight: bold;
      color: grey;
      border-bottom: 1px dotted grey;
      padding-bottom: 5px;
    }

    div.tags {
      padding-bottom: 10px;
      div.ngds-tag {
        margin-left: 0px;
        margin-right: 5px;
        margin-top: 5px;
        border: 1px dashed grey;
      }
    }
  }

}

.leaflet-popup-pane .leaflet-popup a.leaflet-popup-close-button {
  color: black;
}

